# bausatz

./: LICENSE  README.md  pyproject.toml
.github/workflows/: branch-name-validation.yml  codecov.yml  publish.yml  ruff.yml  tests.yml
src/bausatz/: __init__.py  component.py  component_factory.py  registry.py
tests/: test_components.py
