[project]
name = "bausatz"
version = "0.1.0"
description = "Config-driven component trees: pydantic-validated classes that self-register by tag and assemble recursively from plain dict/JSON specs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Matthias Denecke" }]
keywords = ["components", "factory", "registry", "pydantic", "config-driven", "plugins", "composition", "discriminated-union"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/MatthiasDenecke/bausatz"
Repository = "https://github.com/MatthiasDenecke/bausatz"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bausatz = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
